# denys-burger

./: package-lock.json  package.json
backend/: .gitignore  README.md  deny_burger_db  pyproject.toml  schema.yml
backend/apps/: urls.py
backend/apps/categories/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/categories/migrations/: 0001_initial.py  0002_alter_category_slug.py
backend/apps/orders/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/orders/migrations/: 0001_initial.py  0002_order_customer_name_order_customer_phone_order_floor_and_more.py  0003_alter_orderproducts_options_alter_order_status_and_more.py  0004_alter_order_total_amount.py  0005_alter_order_total_amount.py
backend/apps/products/: admin.py  manager.py  models.py  serializers.py  urls.py  views.py
backend/apps/products/migrations/: 0001_initial.py  0002_alter_product_options_alter_product_table_and_more.py  0003_product_category.py  0004_alter_productingredient_product.py
backend/core/: manager.py  settings.py  urls.py
public/img/: usa.com
public/locales/en/: en.json
public/locales/uk/: uk.json
src/: App.jsx  i18n.js  index.css  main.jsx
src/app/: store.js
src/components/: Cart.jsx  Footers.jsx  Head.jsx  Logos.jsx  ModalWindow.jsx
src/components/Cart/: Cart.jsx  cartStyling.css
src/components/Footers/: Footers.jsx  footersStyling.css
src/components/Header/: Header.jsx  LanguageToggle.jsx  Logos.jsx  headerStyling.css
src/data/: categories.js  products.js
src/hooks/: useWindowWidth.jsx
(+19 files in other folders)
